2006-12-03  Guillem Jover  <guillem@hadrons.org>

	Rename functions obsoleted in linux 2.1.93.

	* 3dfx_device.c (pcibios_read_config_byte): Rename to ...
	(pci_read_config_byte): ... this and remove first argument.
	(pcibios_read_config_word): Rename to ...
	(pci_read_config_word): ... this and remove first argument.
	(pcibios_read_config_dword): Rename to ...
	(pci_read_config_dword): ... this and remove first argument.
	(pcibios_write_config_dword): Rename to ...
	(pci_write_config_dword): ... this and remove first argument.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (VMA_OFFSET_ALIGNED): New macro.
	(mmap_3dfx): Use VMA_OFFSET_ALIGNED, instead of checking for specific
	kernel versions and changing behaviour.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Indentation fixes.

2006-03-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Rename HAVE_MTRR to CONFIG_MTRR.

2005-04-23  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Add GPL notice.

2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>

	* 3dfx_device.c: Add Macronix MX86251 Voodoo Rush support.

2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>

	* 3dfx_device.c (setmtrr_3dfx): Add missing break on default case.

2005-04-23  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Fix comment format. Remove obsolete compiler flags
	  info.

2005-04-23  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c: Move ChangeLog entries to ...
	* ChangeLog: ... here.

2004-05-05  Guillem Jover  <guillem@debian.org>

	* Use designators in fops_3dfx instead of the obsolete colon syntax.

2004-05-04  Guillem Jover  <guillem@debian.org>

	* Cleaned new kernel build system.
	* Indentation fixes. Normalized ChangeLog date format.

2004-02-13  Aristeu Sergio Rozanski Filho  <aris@cathedrallabs.org>

	* Use kernel build system.
	* Use new pci probe present in 2.6.x kernels.
	* Use module auto-loading.

2004-01-22  Guillem Jover  <guillem@debian.org>
